--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -611,3 +611,176 @@
 		}
 	}
 }
+
+/* Responsive layout for tablet devices */
+@media (max-width: 1024px) {
+	#banner {
+		height: fit-content;
+		margin-top: -75px;
+
+		.swiper-slide {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			align-items: center;
+			padding: 0 1em;
+			padding-top: 100px;
+
+			.slide-content {
+				max-width: 100%;
+
+				.buttons {
+					gap: 10px;
+				}
+			}
+
+			.image-container {
+				max-width: 100%;
+				height: 300px;
+				margin-top: 1.5em;
+				img.main-image {
+					object-fit: fill;
+				}
+			}
+		}
+
+		.swiper-button-prev,
+		.swiper-button-next {
+			top: 75%;
+			width: 40px;
+			height: 40px;
+			font-size: 20px;
+		}
+
+		.swiper-button-prev {
+			left: 5%;
+		}
+
+		.swiper-button-next {
+			left: 80%;
+		}
+	}
+	#about {
+		.image-container {
+			height: 300px;
+			width: 100%;
+			max-width: 100vw;
+			img {
+				object-fit: cover;
+			}
+		}
+		.content {
+			width: 100%;
+			max-width: 100vw;
+			height: fit-content;
+			padding: 2em 1.5em;
+			.facts {
+				.fact {
+					width: 100%;
+					img {
+						width: 40px;
+						height: 40px;
+						object-fit: contain;
+					}
+				}
+			}
+		}
+	}
+	#locations {
+		height: fit-content;
+		overflow-x: hidden;
+
+		.swiper-wrapper {
+			height: 100%;
+			max-height: 100%;
+			align-items: center;
+		}
+
+		.swiper-slide {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			align-items: center;
+			padding: 0 1em;
+
+			.slide-content {
+				max-width: 100%;
+				padding: 2em 0;
+				h5 {
+					margin-bottom: 5px;
+				}
+
+				h4 {
+					font-size: 22px;
+					line-height: 27px;
+				}
+
+				.btn-sm {
+					margin-top: 1.5em;
+					img {
+						width: 26px;
+						height: 26px;
+						margin-left: 0.5em;
+					}
+				}
+			}
+
+			.image-container {
+				align-self: flex-end;
+				max-width: 100%;
+				height: 300px;
+				img.main-image {
+					object-fit: cover;
+				}
+			}
+		}
+
+		.swiper-button-prev,
+		.swiper-button-next {
+			top: 57%;
+			width: 40px;
+			height: 40px;
+			font-size: 20px;
+		}
+
+		.swiper-button-prev {
+			left: 5%;
+		}
+
+		.swiper-button-next {
+			left: 85%;
+		}
+	}
+	#news {
+		padding: 2em 0;
+		.container {
+			.title-section {
+				.content {
+					width: 100%;
+				}
+				a {
+					margin-top: 1em;
+				}
+			}
+
+			.news-grid {
+				.post {
+					.image-wrapper {
+						height: 200px;
+					}
+					.content {
+						height: 180px;
+						h6 {
+							font-size: 14px;
+							line-height: 16.1px;
+						}
+						p {
+							font-size: 18px;
+							line-height: 23px;
+						}
+					}
+				}
+			}
+		}
+	}
+}
