--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -716,6 +716,62 @@ footer {
 	}
 }
 
+/* Responsive layout for tablet devices */
+@media (max-width: 1024px) {
+	header {
+		.container {
+			.logo {
+				img {
+					width: 150px;
+				}
+			}
+			.main-menu {
+				display: none;
+			}
+			.header-links {
+				//Mobile Menu Toggler
+				.menu-toggle {
+					display: flex;
+				}
+
+				.search {
+					img {
+						width: 22px;
+						height: 22px;
+					}
+				}
+				.translate {
+					display: none;
+				}
+			}
+		}
+	}
+	#common-banner {
+		height: fit-content;
+		width: 100%;
+		.container {
+			height: 100%;
+			flex-direction: column;
+			.content {
+				width: 100%;
+				height: fit-content;
+				padding: 2em 0;
+				h1 {
+					margin-top: 0;
+				}
+			}
+
+			.image-wrapper {
+				width: 100%;
+				img {
+					height: 100%;
+					object-fit: fill;
+				}
+			}
+		}
+	}
+}
+
 /* Responsive layout for Mobile devices */
 @media (max-width: 768px) {
 	//Primary Title
@@ -731,7 +787,7 @@ footer {
 
 	//Tertiary Title
 	h5 {
-		font-size: 14px;
+		font-size: 12px;
 		line-height: 18.4px;
 	}
 
@@ -776,34 +832,6 @@ footer {
 		}
 	}
 
-	header {
-		.container {
-			.logo {
-				img {
-					width: 150px;
-				}
-			}
-			.main-menu {
-				display: none;
-			}
-			.header-links {
-				//Mobile Menu Toggler
-				.menu-toggle {
-					display: flex;
-				}
-
-				.search {
-					img {
-						width: 22px;
-						height: 22px;
-					}
-				}
-				.translate {
-					display: none;
-				}
-			}
-		}
-	}
 	footer {
 		.footer-content {
 			min-height: 400px;
@@ -889,9 +917,9 @@ footer {
 
 			.image-wrapper {
 				width: 100%;
-				height: 250px;
+				height: 250px !important;
 				img {
-					object-fit: fill;
+					object-fit: fill !important;
 				}
 			}
 		}
