--- a/assets/css/_careers.scss
+++ b/assets/css/_careers.scss
@@ -1,358 +1,524 @@
 /* CAREERS PAGE STYLES */
+.modal-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8); // Dark background with 0.5 opacity
+  z-index: 1000;
+  overflow-y: auto;
+
+  .modal-content {
+    position: relative;
+    background-color: #fff;
+    margin: 5% auto;
+    padding: 25px;
+    width: 80%;
+    max-width: 700px;
+    border-radius: 8px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+
+    .close-modal {
+      position: absolute;
+      top: 1em;
+      right: 25px;
+      cursor: pointer;
+    }
+
+    .modal-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+
+      h2 {
+        font-size: 28px;
+        color: #282828;
+      }
+    }
+
+    .modal-body {
+      h4 {
+        color: #282828;
+      }
+
+      .job-details {
+        span {
+          p {
+            font-weight: 700;
+            color: #282828;
+          }
+        }
+      }
+
+      .qualifications {
+        span {
+          color: #282828 !important;
+          margin-bottom: 8px;
+          &:last-of-type {
+            margin-bottom: 0;
+          }
+        }
+      }
+
+      p {
+        color: #282828 !important;
+        text-wrap: wrap;
+        span {
+          color: var(--secondary-accent-color);
+        }
+      }
+    }
+  }
+}
+
 #career-intro {
-	padding: 3em 0;
-	.container {
-		.btn-sm {
-			padding: 12px;
-			z-index: 2;
-			background-color: var(--primary-accent-color);
-			color: var(--background-color);
-		}
-		.reasons {
-			.reason {
-				width: 100%;
-				min-height: 165px;
-				color: var(--background-color);
-				padding: 0.8em;
-				.bg-image {
-					z-index: 0;
-					object-fit: cover;
-				}
-				.overlay {
-					opacity: 0.95;
-					z-index: 1;
-				}
-				.reason-icon {
-					width: 50px;
-					height: 50px;
-					object-fit: contain;
-					z-index: 2;
-				}
-				h6 {
-					width: 60%;
-					font-size: 20px;
-					font-weight: 700;
-					line-height: 23px;
-					text-align: center;
-					margin-top: 0.2em;
-					z-index: 2;
-				}
-				&:nth-of-type(1) {
-					.overlay {
-						background-color: var(--primary-accent-color);
-					}
-				}
-				&:nth-of-type(2) {
-					.overlay {
-						background-color: #ff4c00;
-					}
-				}
-				&:nth-of-type(3) {
-					.overlay {
-						background-color: var(--secondary-accent-color);
-					}
-				}
-				&:nth-of-type(4) {
-					.overlay {
-						background-color: #9a3821;
-					}
-				}
-			}
-		}
-	}
+  padding: 3em 0;
+  .container {
+    .btn-sm {
+      padding: 12px;
+      z-index: 2;
+      background-color: var(--primary-accent-color);
+      color: var(--background-color);
+    }
+    .reasons {
+      .reason {
+        width: 100%;
+        min-height: 165px;
+        color: var(--background-color);
+        padding: 0.8em;
+        .bg-image {
+          z-index: 0;
+          object-fit: cover;
+        }
+        .overlay {
+          opacity: 0.95;
+          z-index: 1;
+        }
+        .reason-icon {
+          width: 50px;
+          height: 50px;
+          object-fit: contain;
+          z-index: 2;
+        }
+        h6 {
+          width: 60%;
+          font-size: 20px;
+          font-weight: 700;
+          line-height: 23px;
+          text-align: center;
+          margin-top: 0.2em;
+          z-index: 2;
+        }
+        &:nth-of-type(1) {
+          .overlay {
+            background-color: var(--primary-accent-color);
+          }
+        }
+        &:nth-of-type(2) {
+          .overlay {
+            background-color: #ff4c00;
+          }
+        }
+        &:nth-of-type(3) {
+          .overlay {
+            background-color: var(--secondary-accent-color);
+          }
+        }
+        &:nth-of-type(4) {
+          .overlay {
+            background-color: #9a3821;
+          }
+        }
+      }
+    }
+  }
 }
 
 #work {
-	min-height: 370px;
-	padding-top: 2em;
-	.bg-image {
-		z-index: 0;
-		object-fit: cover;
-		object-position: center 10%;
-	}
-	.overlay {
-		background: linear-gradient(90deg, #9a3821 26.85%, rgba(154, 56, 33, 0) 100%);
-		opacity: 0.95;
-		z-index: 1;
-	}
-	.play-btn {
-		top: 15vh;
-		right: 25vw;
-		z-index: 3;
-		color: var(--background-color);
-		transition: all 0.3s ease-in-out;
-		&:hover {
-			scale: 0.95;
-		}
-		img {
-			width: 80px;
-			height: 80px;
-			object-fit: contain;
-		}
-		p {
-			font-size: 20px;
-			font-weight: 700;
-			line-height: 23px;
-			margin-top: 5px;
-		}
-	}
-	.container {
-		z-index: 3 !important;
-		color: var(--background-color);
-		h2 {
-			position: relative;
-			z-index: 3 !important;
-			width: 40%;
-		}
-		p {
-			position: relative;
-			z-index: 3 !important;
-			width: 50%;
-		}
-	}
+  height: fit-content;
+  min-height: 370px;
+  padding-top: 2em;
+  padding-bottom: 2em;
+  .bg-image {
+    z-index: 0;
+    object-fit: cover;
+    object-position: center 10%;
+  }
+  .overlay {
+    background: linear-gradient(
+      90deg,
+      #9a3821 26.85%,
+      rgba(154, 56, 33, 0) 100%
+    );
+    opacity: 0.95;
+    z-index: 1;
+  }
+  .play-btn {
+    top: 15vh;
+    right: 25vw;
+    z-index: 3;
+    color: var(--background-color);
+    transition: all 0.3s ease-in-out;
+    &:hover {
+      scale: 0.95;
+    }
+    img {
+      width: 80px;
+      height: 80px;
+      object-fit: contain;
+    }
+    p {
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 23px;
+      margin-top: 5px;
+    }
+  }
+  .container {
+    z-index: 3 !important;
+    color: var(--background-color);
+    h2 {
+      position: relative;
+      z-index: 3 !important;
+      width: 40%;
+    }
+    p {
+      position: relative;
+      z-index: 3 !important;
+      width: 50%;
+    }
+    button {
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 3 !important;
+      width: fit-content;
+      height: fit-content;
+      padding: 10px 20px;
+      background-color: var(--secondary-accent-color);
+      color: var(--background-color);
+      transition: all 0.3s ease-in-out;
+      &:hover {
+        background-color: var(--primary-accent-color);
+      }
+    }
+  }
 }
 
 #vacancies {
-	padding: 3em 0;
-	.container {
-		.filter-section {
-			.desc {
-				width: 60%;
-			}
-			.filter-items {
-				h6 {
-					font-size: 18px;
-					font-weight: 700;
-					line-height: 23px;
-					text-wrap: nowrap;
-				}
-				span {
-					cursor: pointer;
-					padding: 8px 16px;
-					&:first-of-type {
-						color: var(--primary-accent-color);
-						background-color: #e2231a33;
-					}
-					&:last-of-type {
-						background-color: var(--primary-accent-color);
-						color: var(--background-color);
-						margin-left: 1em;
-					}
-				}
-			}
-		}
+  padding: 3em 0;
+  .container {
+    .filter-section {
+      .desc {
+        width: 60%;
+      }
+      .filter-items {
+        h6 {
+          font-size: 18px;
+          font-weight: 700;
+          line-height: 23px;
+          text-wrap: nowrap;
+        }
+        span {
+          cursor: pointer;
+          padding: 8px 16px;
+          &:first-of-type {
+            color: var(--primary-accent-color);
+            background-color: #e2231a33;
+          }
+          &:last-of-type {
+            background-color: var(--primary-accent-color);
+            color: var(--background-color);
+            margin-left: 1em;
+          }
+        }
+      }
+    }
 
-		.vacancy-grid {
-			.vacancy {
-				width: 100%;
-				min-height: 130px;
-				background-color: #fdf2f1;
-				padding: 0.5em;
-				h6 {
-					font-size: 20px;
-					font-weight: 700;
-					line-height: 23px;
-				}
-				span {
-					img {
-						width: 18px;
-						height: 18px;
-						object-fit: contain;
-					}
-					p {
-						font-weight: 700;
-					}
-				}
-				a {
-					background-color: var(--primary-accent-color);
-					color: var(--background-color);
-					padding: 4px 8px;
-				}
-			}
-		}
-	}
+    .vacancy-grid {
+      .vacancy {
+        width: 100%;
+        min-height: 130px;
+        background-color: #fdf2f1;
+        padding: 0.5em;
+        h6 {
+          font-size: 20px;
+          font-weight: 700;
+          line-height: 23px;
+        }
+        span {
+          img {
+            width: 18px;
+            height: 18px;
+            object-fit: contain;
+          }
+          p {
+            font-weight: 700;
+          }
+        }
+        a {
+          background-color: var(--primary-accent-color);
+          color: var(--background-color);
+          padding: 4px 8px;
+        }
+      }
+    }
+  }
 }
 
 /* Responsive layout for Mobile devices */
 @media (max-width: 768px) {
-	#career-intro {
-		padding: 2em 0;
-		.container {
-			.reasons {
-				.reason {
-					min-height: 165px;
-					.reason-icon {
-						width: 50px;
-						height: 50px;
-					}
-					h6 {
-						width: 100%;
-					}
-				}
-			}
-		}
-	}
-	#work {
-		min-height: 450px;
-		.overlay {
-			background: linear-gradient(90deg, #9a3821 100%, rgba(154, 56, 33, 0) 100%);
-			opacity: 0.8;
-			z-index: 1;
-		}
-		.play-btn {
-			top: 80%;
-			right: 78%;
-			img {
-				width: 50px;
-				height: 50px;
-			}
-			p {
-				font-size: 16px;
-				line-height: 22px;
-			}
-		}
-		.container {
-			h2 {
-				width: 100%;
-			}
-			p {
-				width: 100%;
-			}
-		}
-	}
-	#vacancies {
-		padding: 2em 0;
-		.container {
-			.filter-section {
-				.desc {
-					width: 100%;
-				}
-				.filter-items {
-					h6 {
-						font-size: 16px;
-						margin: 0.5em 0;
-					}
-					span {
-						padding: 6px 12px;
-						&:last-of-type {
-							margin-left: 0.5em;
-						}
-					}
-				}
-			}
+  .modal-overlay {
+    .modal-content {
+      margin: 5% auto;
+      padding: 25px;
+      width: 90%;
 
-			.vacancy-grid {
-				.vacancy {
-					width: 100%;
-					min-height: 130px;
-					padding: 0.5em;
-					h6 {
-						font-size: 18px;
-						line-height: 23px;
-					}
-					span {
-						img {
-							width: 18px;
-							height: 18px;
-						}
-						p {
-							font-weight: 700;
-						}
-					}
-				}
-			}
-		}
-	}
+      .close-modal {
+        top: 1em;
+        right: 20px;
+      }
+
+      .modal-header {
+        h2 {
+          font-size: 24px;
+          line-height: 32px;
+          color: #282828;
+        }
+      }
+
+      .modal-body {
+        h4 {
+          font-size: 18px;
+          line-height: 24px;
+        }
+
+        .job-details {
+          span {
+            p {
+              font-size: 14px;
+              font-weight: 700;
+              color: #282828 !important;
+            }
+          }
+        }
+
+        .qualifications {
+          span {
+            font-size: 15px;
+            color: #282828 !important;
+            font-weight: 500;
+            margin-bottom: 8px;
+            img {
+              width: 20px !important;
+              height: 20px !important;
+            }
+            &:last-of-type {
+              margin-bottom: 0;
+            }
+          }
+        }
+
+        p {
+          color: #282828 !important;
+          text-wrap: wrap;
+          span {
+            color: var(--secondary-accent-color);
+          }
+        }
+      }
+    }
+  }
+  #career-intro {
+    padding: 2em 0;
+    .container {
+      .reasons {
+        .reason {
+          min-height: 165px;
+          .reason-icon {
+            width: 50px;
+            height: 50px;
+          }
+          h6 {
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+  #work {
+    min-height: 450px;
+    .overlay {
+      background: linear-gradient(
+        90deg,
+        #9a3821 100%,
+        rgba(154, 56, 33, 0) 100%
+      );
+      opacity: 0.8;
+      z-index: 1;
+    }
+    .play-btn {
+      top: 80%;
+      right: 78%;
+      img {
+        width: 50px;
+        height: 50px;
+      }
+      p {
+        font-size: 16px;
+        line-height: 22px;
+      }
+    }
+    .container {
+      h2 {
+        width: 100%;
+      }
+      p {
+        width: 100%;
+      }
+    }
+  }
+  #vacancies {
+    padding: 2em 0;
+    .container {
+      .filter-section {
+        .desc {
+          width: 100%;
+        }
+        .filter-items {
+          h6 {
+            font-size: 16px;
+            margin: 0.5em 0;
+          }
+          span {
+            padding: 6px 12px;
+            &:last-of-type {
+              margin-left: 0.5em;
+            }
+          }
+        }
+      }
+
+      .vacancy-grid {
+        .vacancy {
+          width: 100%;
+          min-height: 130px;
+          padding: 0.5em;
+          h6 {
+            font-size: 18px;
+            line-height: 23px;
+          }
+          span {
+            img {
+              width: 18px;
+              height: 18px;
+            }
+            p {
+              font-weight: 700;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 /* Responsive layout for tablet devices */
 @media (max-width: 1024px) {
-	#career-intro {
-		padding: 2em 0;
-		.container {
-			.reasons {
-				.reason {
-					min-height: 165px;
-					.reason-icon {
-						width: 50px;
-						height: 50px;
-					}
-					h6 {
-						width: 100%;
-					}
-				}
-			}
-		}
-	}
-	#work {
-		min-height: 450px;
-		.overlay {
-			background: linear-gradient(90deg, #9a3821 100%, rgba(154, 56, 33, 0) 100%);
-			opacity: 0.8;
-			z-index: 1;
-		}
-		.play-btn {
-			top: 80%;
-			right: 78%;
-			img {
-				width: 50px;
-				height: 50px;
-			}
-			p {
-				font-size: 16px;
-				line-height: 22px;
-			}
-		}
-		.container {
-			h2 {
-				width: 100%;
-			}
-			p {
-				width: 100%;
-			}
-		}
-	}
-	#vacancies {
-		padding: 2em 0;
-		.container {
-			.filter-section {
-				.desc {
-					width: 100%;
-				}
-				.filter-items {
-					h6 {
-						font-size: 16px;
-						margin: 0.5em 0;
-					}
-					span {
-						padding: 6px 12px;
-						&:last-of-type {
-							margin-left: 0.5em;
-						}
-					}
-				}
-			}
+  #career-intro {
+    padding: 2em 0;
+    .container {
+      .reasons {
+        .reason {
+          min-height: 165px;
+          .reason-icon {
+            width: 50px;
+            height: 50px;
+          }
+          h6 {
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+  #work {
+    min-height: 450px;
+    .overlay {
+      background: linear-gradient(
+        90deg,
+        #9a3821 100%,
+        rgba(154, 56, 33, 0) 100%
+      );
+      opacity: 0.8;
+      z-index: 1;
+    }
+    .play-btn {
+      top: 80%;
+      right: 78%;
+      img {
+        width: 50px;
+        height: 50px;
+      }
+      p {
+        font-size: 16px;
+        line-height: 22px;
+      }
+    }
+    .container {
+      h2 {
+        width: 100%;
+      }
+      p {
+        width: 100%;
+      }
+    }
+  }
+  #vacancies {
+    padding: 2em 0;
+    .container {
+      .filter-section {
+        .desc {
+          width: 100%;
+        }
+        .filter-items {
+          h6 {
+            font-size: 16px;
+            margin: 0.5em 0;
+          }
+          span {
+            padding: 6px 12px;
+            &:last-of-type {
+              margin-left: 0.5em;
+            }
+          }
+        }
+      }
 
-			.vacancy-grid {
-				.vacancy {
-					width: 100%;
-					min-height: 130px;
-					padding: 0.5em;
-					h6 {
-						font-size: 18px;
-						line-height: 23px;
-					}
-					span {
-						img {
-							width: 18px;
-							height: 18px;
-						}
-						p {
-							font-weight: 700;
-						}
-					}
-				}
-			}
-		}
-	}
+      .vacancy-grid {
+        .vacancy {
+          width: 100%;
+          min-height: 130px;
+          padding: 0.5em;
+          h6 {
+            font-size: 18px;
+            line-height: 23px;
+          }
+          span {
+            img {
+              width: 18px;
+              height: 18px;
+            }
+            p {
+              font-weight: 700;
+            }
+          }
+        }
+      }
+    }
+  }
 }
