--- a/assets/css/_careers.scss
+++ b/assets/css/_careers.scss
@@ -260,7 +260,7 @@
             font-weight: 700;
           }
         }
-        a {
+        button {
           background-color: var(--primary-accent-color);
           color: var(--background-color);
           padding: 4px 8px;
