monday july week 2 edits

--- a/assets/css/_careers.scss
+++ b/assets/css/_careers.scss
@@ -5,20 +5,22 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.85); // Dark background with 0.5 opacity
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
   z-index: 1000;
   overflow-y: auto;
 
   .modal-content {
-    position: relative;
     background-color: #fff;
-    margin: 5% auto;
+    margin: 20px auto;
     padding: 25px;
     width: 80%;
     max-width: 700px;
     border-radius: 8px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 
     .close-modal {
       position: absolute;
