--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2229,7 +2229,7 @@ footer .footer-bar .container .fb-links a:last-of-type::after {
   position: absolute;
   top: 10px;
   right: 10px;
-  background-color: var(--primary-accent-color);
+  background-color: #ff4c00;
   padding: 3px 6px;
   color: var(--background-color);
   font-size: 12px;
@@ -2313,20 +2313,22 @@ footer .footer-bar .container .fb-links a:last-of-type::after {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.85);
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
   z-index: 1000;
   overflow-y: auto;
 }
 .modal-overlay .modal-content {
-  position: relative;
   background-color: #fff;
-  margin: 5% auto;
+  margin: 20px auto;
   padding: 25px;
   width: 80%;
   max-width: 700px;
   border-radius: 8px;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 .modal-overlay .modal-content .close-modal {
   position: absolute;
@@ -2895,7 +2897,11 @@ footer .footer-bar .container .fb-links a:last-of-type::after {
      object-fit: contain;
 }
 #other-locations .container .locations .location .ct-item p {
+  font-size: 14px;
   font-weight: 600;
+}
+#other-locations .container .locations .location a {
+  font-size: 15px;
 }
 #other-locations .container .locations .location a img {
   width: 32px;
