--- a/assets/css/_contact.scss
+++ b/assets/css/_contact.scss
@@ -119,7 +119,7 @@
             }
           }
         }
-        span {
+        button {
           cursor: pointer;
           padding: 8px 16px;
           &:first-of-type {
