--- a/assets/css/_location.scss
+++ b/assets/css/_location.scss
@@ -311,7 +311,7 @@
           }
         }
       }
-      span {
+      button {
         cursor: pointer;
         padding: 8px 16px;
         p {
