career popup fixed

--- a/assets/css/_careers.scss
+++ b/assets/css/_careers.scss
@@ -16,6 +16,7 @@
     padding: 25px;
     width: 80%;
     max-width: 700px;
+    max-height: 90vh;
     border-radius: 8px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
     position: relative;
