--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2324,6 +2324,7 @@ footer .footer-bar .container .fb-links a:last-of-type::after {
   padding: 25px;
   width: 80%;
   max-width: 700px;
+  max-height: 90vh;
   border-radius: 8px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
   position: relative;
